syntax = "proto3";
package index.service.v1;
option go_package = "github.com/Wafer233/msproject-be/api-gateway/proto/index";

message IndexMessage{}

message IndexResponse{
  repeated Menu menus = 1;
}

message Menu {
  int64  id = 1;
  int64 pid = 2;
  string title = 3;
  string icon = 4;
  string url = 5;
  string filePath = 6;
  string params = 7;
  string node = 8;
  int32 sort = 9;
  int32 status = 10;
  int64 createBy = 11;
  int32 isInner = 12;
  string values = 13;
  int32 showSlider = 14;
  string statusText = 15;
  string innerText = 16;
  string fullUrl = 17;
  repeated Menu children = 18;
}


// Project service definition
service IndexService {
  // Menu navigation endpoint
  rpc Index(IndexMessage) returns (IndexResponse) {}
}